src/scss/pages/funding/_funding.scss
.funding-list-title {
  // padding-left: 30px;
  margin-top: 20px;
  font-size: 24px;
  font-weight: bold;
  letter-spacing: 1px;
}

.funding-list {
  font-size: 18px;
}
.funding-buttons {
  border-radius: 0 !important;
  background-color: black;
  color: white;
}
#funding-page-count {
  color: white;
  font-size: 18px;
}
.funding-table {
  border-color: white !important;
  border-bottom: none !important;
}
.react-pdf__Page {
  box-shadow: 1px 20px 60px -10px rgba(0,0,0,0.71) !important;
  -webkit-box-shadow: 1px 20px 60px -10px rgba(0,0,0,0.71) !important;
  -moz-box-shadow: 1px 20px 60px -10px rgba(0,0,0,0.71) !important;
}
#funding-pdf {
  display: flex;
  flex-direction: column;
  background-color: #59626a;
  justify-content: center;
  align-items: center;
  align-content: center;
  padding-top: 10px;
  padding-bottom: -50px;
  height: auto;
}
#funding-consul-link {
  margin-bottom: 30px;
}
#funding-pdf-container {
  width: 100%;
  max-width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
}
.react-pdf__Page__canvas {
  @include media-breakpoint-up(lg) {
    width: 792px !important;
    height: 611px !important;
    margin: none;
  }
  width: 100% !important;
  height: auto !important;
}
#funding-pdf-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  padding: 20px;
}
#funding-page-count {
  padding-left: 20px;
  padding-right: 20px;
}

#funding-list-1 {
  list-style-type: square;
}

#funding-list-2 {
  padding-bottom: 30px;
}

